--- a/pom.xml
+++ b/pom.xml
@@ -103,6 +103,12 @@
       <artifactId>aspectjweaver</artifactId>
       <version>1.8.5</version>
     </dependency>
+    <!--md5-->
+    <dependency>
+      <groupId>commons-codec</groupId>
+      <artifactId>commons-codec</artifactId>
+      <version>1.10</version>
+    </dependency>
   </dependencies>
   <build>
     <finalName>PhotoWall4LQ</finalName>
