--- a/pom.xml
+++ b/pom.xml
@@ -109,6 +109,13 @@
       <artifactId>commons-codec</artifactId>
       <version>1.10</version>
     </dependency>
+    <!--servlet-->
+    <dependency>
+      <groupId>javax.servlet</groupId>
+      <artifactId>javax.servlet-api</artifactId>
+      <version>3.1-b09</version>
+      <scope>provided</scope>
+    </dependency>
   </dependencies>
   <build>
     <finalName>PhotoWall4LQ</finalName>
